# app-watch

./: README.md  install.sh
app-watch-mac/: CMakeLists.txt  app-watch  main.swift
app-watch-wayland/: extension.js  metadata.json
app-watch-wayland@local/: extension.js  metadata.json
daemon/: CMakeLists.txt
daemon/src/: apps.c  apps.h  constants.h  main.c  main.swift  network.c  string_utils.c
daemon/tests/: test_string_utils.c
server/: CMakeLists.txt
server/src/: apps.c  apps.h  main.c  network.h  string_utils.c  string_utils.h
server/tests/: test_string_utils.c
test-client/: client.py  main.c
